@@ -35,66 +35,10 @@
                 </mat-select>
             </div>
         </div>
-        <div class="border rounded mb-3 p-3">
-            <label id="paymentMethod" class="mb-0 font-9">Catalogue:</label>
-            <mat-select class="form-control form-control-sm mb-3" value="" [disabled]="!isEditable()" (selectionChange)="getItems($event.value)">
-                <mat-option [value]="''">All</mat-option>
-                <mat-option [value]="'uncategorized'">Uncategorized</mat-option>
-                <mat-option [value]="category.id" *ngFor="let category of categories">{{ category?.name }}</mat-option>
-            </mat-select>
-            <label id="itemtype" class="mb-0 font-9">Item: </label>
-            <ws-search-select for="itemtype" [items]="items" [loading]="itemLoading.isRunning()" (selectionChange)="selectionChange($event)" (searchValueChange)="searchItemValueChange($event)" (scroll)="getItems(categoryId, true)" (open)="openItemChange($event)" [class.disabled]="!isEditable()" class="d-block form-control form-control-sm mb-2"></ws-search-select>
-            <label id="itemtype" class="mb-0 font-9">Item Type: </label>
-            <mat-select for="itemtype" class="form-control form-control-sm mb-2" formControlName="itemType" (selectionChange)="selectItemType($event.value)">
-                <mat-option [value]="itemType" *ngFor="let itemType of itemTypes">{{itemType.name}}</mat-option>
-            </mat-select>
-            <div class="row no-gutters mb-2">
-                <div class="col-lg-6 pr-lg-2">
-                    <label id="price" class="mb-0 font-9">Price: </label>
-                    <div class="position-relative">
-                        <a *ngIf="form.controls['itemType'].value" (click)="setDefaultPrice()" href="javascript:void(0)" class="position-absolute font-9" style="right: 8px; top: 5px; z-index: 99;">Set default</a>
-                        <input for="price" class="form-control form-control-sm" style="padding-right: 5.25rem" formControlName="itemPrice" />
-                    </div>
-                </div>
-                <div class="col-lg-6 mt-2 mt-lg-0">
-                    <label id="quantity" class="mb-0 font-9">Quantity: </label>
-                    <input for="quantity" class="form-control form-control-sm" formControlName="itemQuantity" />
-                </div>
-            </div>
-            <div>
-                <button [disabled]="!isEditable()" class="float-right btn btn-controller btn-sm" (click)="addItem()">
-                    <span class="fas fa-plus mr-2 d-inline-block"></span>
-                    Add Item
-                </button>
-            </div>
-            <div class="clearfix"></div>
-        </div>
-        <div class="mb-3">
-            <h5 class="h6">Items ({{inListItems.length}})</h5>
-            <ul class="list-group font-9" cdkDropList (cdkDropListDropped)="drop($event)" *ngIf="inListItems.length">
-                <li cdkDrag class="list-group-item d-flex align-items-center" *ngFor="let targetItem of inListItems">
-                    <span class="col p-0">{{ targetItem.name }} {{ targetItem.type !== 'default' ? '- ' + targetItem.type : '' }} - RM {{ targetItem.price  | number: '1.2-2' }} x {{ targetItem.quantity}} </span>
-                    <span class="px-1">RM {{ targetItem.price * targetItem.quantity | number: '1.2-2' }}</span>
-                    <span *ngIf="isEditable()" class="fas fa-times pl-2 clickable" (click)="removeItem(targetItem)"></span>
-                </li>
-            </ul>
-            <p class="text-center py-3 d-block font-9" *ngIf="!inListItems.length">No Item</p>
-        </div>
-        <div class="mb-3">
-            <h5 class="h6">Delivery Fee</h5>
-            <input class="form-control form-control-sm" placeholder="Price ($)" formControlName="deliveryFee" (input)="notifyCalculation()" />
-        </div>
-        <div class="mb-3">
-            <h5 class="h6">Promotion</h5>
-            <mat-select class="form-control form-control-sm" placeholder="Promotion" (selectionChange)="notifyCalculation()" formControlName="promotion">
-                <mat-option [value]="''">No promotion</mat-option>
-                <mat-option [value]="promotion._id" *ngFor="let promotion of promotions">{{ promotion.title }}</mat-option>
-            </mat-select>
-        </div>
-        <div class="mb-3">
+        <div>
             <h5 class="h6">Calculation</h5>
             <div class="border rounded p-3">
-                <table class="float-right font-9">
+                <table class="font-9">
                     <tr *ngIf="form.controls['deliveryFee'].value !== ''">
                         <td class="font-weight-bold">Delivery (MYR):</td>
                         <td class="text-right" style="width: 150px">{{ delivery | number: '1.2-2' }}</td>
@@ -115,96 +59,165 @@
                 <div class="clearfix"></div>
             </div>
         </div>
-        <hr />
-        <h5 class="h6">Delivery Option</h5>
-        <mat-radio-group class="d-block font-9 mb-3" formControlName="deliveryOption">
-            <mat-radio-button [color]="'primary'" class="d-block" [value]="'self_pickup'">Self-pickup</mat-radio-button>
-            <mat-radio-button [color]="'primary'" class="d-block" [value]="'delivery'">Delivery</mat-radio-button>
-        </mat-radio-group>
-        <div *ngIf="form.controls.deliveryOption.value == 'self_pickup'" class="mb-3">
-            <h5 class="h6">Customer Details</h5>
-            <div class="row no-gutters">
-                <div class="col-lg-6 pr-lg-1">
-                    <label id="firstName" class="mb-0 font-9">First Name: </label>
-                    <input for="firstName" class="form-control form-control-sm mb-2" maxlength="36" formControlName="firstName" />
-                </div>
-                <div class="col-lg-6 pl-lg-1">
-                    <label id="lastName" class="mb-0 font-9">Last Name: </label>
-                    <input for="lastName" class="form-control form-control-sm mb-2" maxlength="36" formControlName="lastName" />
-                </div>
-            </div>
-            <label id="contactTel" class="mb-0 font-9">Contact Tel: </label>
-            <input for="contactTel" class="form-control form-control-sm mb-2" maxlength="36" formControlName="phoneNumber" />
-            <mat-checkbox [color]="'primary'" class="pt-1 mr-2 d-inline-block" formControlName="isCustomerSaved">
-                <span class="font-8 align-middle">Check to save customer</span>
-            </mat-checkbox>
-        </div>
-        <div *ngIf="form.controls.deliveryOption.value == 'delivery'" class="mb-3">
-            <h5 class="h6">Delivery Details</h5>
-            <div class="row no-gutters">
-                <div class="col-lg-6 pr-lg-1">
-                    <label id="firstName" class="mb-0 font-9">First Name: </label>
-                    <input for="firstName" class="form-control form-control-sm mb-2" maxlength="36" formControlName="firstName" />
-                </div>
-                <div class="col-lg-6 pl-lg-1">
-                    <label id="lastName" class="mb-0 font-9">Last Name: </label>
-                    <input for="lastName" class="form-control form-control-sm mb-2" maxlength="36" formControlName="lastName" />
-                </div>
-            </div>
-            <label id="contactTel" class="mb-0 font-9">Contact Tel: </label>
-            <input for="contactTel" class="form-control form-control-sm mb-2" maxlength="36" formControlName="phoneNumber" />
-            <div class="mb-2">
-                <div class="mb-2">
-                    <label id="deliveryAddress" class="mb-0 font-9">Delivery Address:</label>
-                    <input for="deliveryAddress" class="form-control form-control-sm" maxlength="128" formControlName="address" />
-                </div>
-                <div class="row no-gutters">
-                    <div class="col-lg-4 pr-lg-2">
-                        <label id="postcode" class="mb-0 font-9">Postcode:</label>
-                        <input for="postcode" class="form-control form-control-sm" maxlength="36" formControlName="postcode" />
-                    </div>
-                    <div class="col-lg-4 pr-lg-2 mt-2 mt-lg-0">
-                        <label id="state" class="mb-0 font-9">State:</label>
-                        <mat-select for="state" class="form-control form-control-sm" formControlName="state">
-                            <mat-option [value]="''">Select a state</mat-option>
-                            <mat-option [value]="_state" *ngFor="let _state of states">{{ _state }}</mat-option>
+        <mat-tab-group mat-align-tabs="start" [selectedIndex]="selectedTab.value" (selectedIndexChange)="selectedTab.setValue($event)" dynamicHeight>
+            <mat-tab label="Items">
+                <div class="p-3">
+                    <div class="border rounded mb-3 p-3">
+                        <label id="paymentMethod" class="mb-0 font-9">Catalogue:</label>
+                        <mat-select class="form-control form-control-sm mb-3" value="" [disabled]="!isEditable()" (selectionChange)="getItems($event.value)">
+                            <mat-option [value]="''">All</mat-option>
+                            <mat-option [value]="'uncategorized'">Uncategorized</mat-option>
+                            <mat-option [value]="category.id" *ngFor="let category of categories">{{ category?.name }}</mat-option>
                         </mat-select>
-                    </div>
-                    <div class="col-lg-4 mt-2 mt-lg-0">
-                        <label id="country" class="mb-0 font-9">Country:</label>
-                        <mat-select for="country" class="form-control form-control-sm" formControlName="country">
-                            <mat-option [value]="''">Select a country</mat-option>
-                            <mat-option [value]="'MYS'">Malaysia</mat-option>
+                        <label id="itemtype" class="mb-0 font-9">Item: </label>
+                        <ws-search-select for="itemtype" [items]="items" [loading]="itemLoading.isRunning()" (selectionChange)="selectionChange($event)" (searchValueChange)="searchItemValueChange($event)" (scroll)="getItems(categoryId, true)" (open)="openItemChange($event)" [class.disabled]="!isEditable()" class="d-block form-control form-control-sm mb-2"></ws-search-select>
+                        <label id="itemtype" class="mb-0 font-9">Item Type: </label>
+                        <mat-select for="itemtype" class="form-control form-control-sm mb-2" formControlName="itemType" (selectionChange)="selectItemType($event.value)">
+                            <mat-option [value]="itemType" *ngFor="let itemType of itemTypes">{{itemType.name}}</mat-option>
                         </mat-select>
+                        <div class="row no-gutters mb-2">
+                            <div class="col-lg-6 pr-lg-2">
+                                <label id="price" class="mb-0 font-9">Price: </label>
+                                <div class="position-relative">
+                                    <a *ngIf="form.controls['itemType'].value" (click)="setDefaultPrice()" href="javascript:void(0)" class="position-absolute font-9" style="right: 8px; top: 5px; z-index: 99;">Set default</a>
+                                    <input for="price" class="form-control form-control-sm" style="padding-right: 5.25rem" formControlName="itemPrice" />
+                                </div>
+                            </div>
+                            <div class="col-lg-6 mt-2 mt-lg-0">
+                                <label id="quantity" class="mb-0 font-9">Quantity: </label>
+                                <input for="quantity" class="form-control form-control-sm" formControlName="itemQuantity" />
+                            </div>
+                        </div>
+                        <div>
+                            <button [disabled]="!isEditable()" class="float-right btn btn-controller btn-sm" (click)="addItem()">
+                                <span class="fas fa-plus mr-2 d-inline-block"></span>
+                                Add Item
+                            </button>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="mb-3">
+                        <h5 class="h6">Items ({{inListItems.length}})</h5>
+                        <ul class="list-group font-9" cdkDropList (cdkDropListDropped)="drop($event)" *ngIf="inListItems.length">
+                            <li cdkDrag class="list-group-item d-flex align-items-center" *ngFor="let targetItem of inListItems">
+                                <span class="col p-0">{{ targetItem.name }} {{ targetItem.type !== 'default' ? '- ' + targetItem.type : '' }} - RM {{ targetItem.price  | number: '1.2-2' }} x {{ targetItem.quantity}} </span>
+                                <span class="px-1">RM {{ targetItem.price * targetItem.quantity | number: '1.2-2' }}</span>
+                                <span *ngIf="isEditable()" class="fas fa-times pl-2 clickable" (click)="removeItem(targetItem)"></span>
+                            </li>
+                        </ul>
+                        <p class="text-center py-3 d-block font-9" *ngIf="!inListItems.length">No Item</p>
                     </div>
                 </div>
-            </div>
-            <mat-checkbox [color]="'primary'" class="pt-1 mr-2 d-inline-block" formControlName="isCustomerSaved">
-                <span class="font-8 align-middle">Check to save customer</span>
-            </mat-checkbox>
-        </div>
-        <div class="mb-3">
-            <h5 class="h6">ETA {{ form.controls.deliveryOption.value == 'delivery' ? 'Delivery' : 'Pick-up'}} Date</h5>
-            <div class="row no-gutters">
-                <input (click)="fromPicker.open()" placeholder="Date" [min]="form.controls['isCompletedChecked'].value ? '': todayDate" formControlName="etaDate" class="form-control form-control-sm mb-2 mr-2" style="max-width: 200px" [matDatepicker]="fromPicker" />
-                <mat-datepicker #fromPicker startView="month" [startAt]="form.controls['isCompletedChecked'].value ? '': todayDate"></mat-datepicker>
-                <div class="input-group" style="width: 150px">
-                    <mat-select class="form-control form-control-sm" placeholder="HH" formControlName="etaDateTimeHour">
-                        <mat-option [value]="''">HH</mat-option>
-                        <mat-option [value]="n" *ngFor="let n of hours">{{n}}</mat-option>
-                    </mat-select>
-                    <mat-select class="form-control form-control-sm" placeholder="MM" formControlName="etaDateTimeMin">
-                        <mat-option [value]="''">MM</mat-option>
-                        <mat-option [value]="n" *ngFor="let n of mins">{{n}}
-                        </mat-option>
+            </mat-tab>
+            <mat-tab label="Delivery">
+                <div class="p-3">
+                    <div class="mb-3">
+                        <h5 class="h6">Delivery Fee</h5>
+                        <input class="form-control form-control-sm" placeholder="Price ($)" formControlName="deliveryFee" (input)="notifyCalculation()" />
+                    </div>
+                    <hr />
+                    <h5 class="h6">Delivery Option</h5>
+                    <mat-radio-group class="d-block font-9 mb-3" formControlName="deliveryOption">
+                        <mat-radio-button [color]="'primary'" class="d-block" [value]="'self_pickup'">Self-pickup</mat-radio-button>
+                        <mat-radio-button [color]="'primary'" class="d-block" [value]="'delivery'">Delivery</mat-radio-button>
+                    </mat-radio-group>
+                    <div *ngIf="form.controls.deliveryOption.value == 'self_pickup'" class="mb-3">
+                        <h5 class="h6">Customer Details</h5>
+                        <div class="row no-gutters">
+                            <div class="col-lg-6 pr-lg-1">
+                                <label id="firstName" class="mb-0 font-9">First Name: </label>
+                                <input for="firstName" class="form-control form-control-sm mb-2" maxlength="36" formControlName="firstName" />
+                            </div>
+                            <div class="col-lg-6 pl-lg-1">
+                                <label id="lastName" class="mb-0 font-9">Last Name: </label>
+                                <input for="lastName" class="form-control form-control-sm mb-2" maxlength="36" formControlName="lastName" />
+                            </div>
+                        </div>
+                        <label id="contactTel" class="mb-0 font-9">Contact Tel: </label>
+                        <input for="contactTel" class="form-control form-control-sm mb-2" maxlength="36" formControlName="phoneNumber" />
+                        <mat-checkbox [color]="'primary'" class="pt-1 mr-2 d-inline-block" formControlName="isCustomerSaved">
+                            <span class="font-8 align-middle">Check to save customer</span>
+                        </mat-checkbox>
+                    </div>
+                    <div *ngIf="form.controls.deliveryOption.value == 'delivery'" class="mb-3">
+                        <h5 class="h6">Delivery Details</h5>
+                        <div class="row no-gutters">
+                            <div class="col-lg-6 pr-lg-1">
+                                <label id="firstName" class="mb-0 font-9">First Name: </label>
+                                <input for="firstName" class="form-control form-control-sm mb-2" maxlength="36" formControlName="firstName" />
+                            </div>
+                            <div class="col-lg-6 pl-lg-1">
+                                <label id="lastName" class="mb-0 font-9">Last Name: </label>
+                                <input for="lastName" class="form-control form-control-sm mb-2" maxlength="36" formControlName="lastName" />
+                            </div>
+                        </div>
+                        <label id="contactTel" class="mb-0 font-9">Contact Tel: </label>
+                        <input for="contactTel" class="form-control form-control-sm mb-2" maxlength="36" formControlName="phoneNumber" />
+                        <div class="mb-2">
+                            <div class="mb-2">
+                                <label id="deliveryAddress" class="mb-0 font-9">Delivery Address:</label>
+                                <input for="deliveryAddress" class="form-control form-control-sm" maxlength="128" formControlName="address" />
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-lg-4 pr-lg-2">
+                                    <label id="postcode" class="mb-0 font-9">Postcode:</label>
+                                    <input for="postcode" class="form-control form-control-sm" maxlength="36" formControlName="postcode" />
+                                </div>
+                                <div class="col-lg-4 pr-lg-2 mt-2 mt-lg-0">
+                                    <label id="state" class="mb-0 font-9">State:</label>
+                                    <mat-select for="state" class="form-control form-control-sm" formControlName="state">
+                                        <mat-option [value]="''">Select a state</mat-option>
+                                        <mat-option [value]="_state" *ngFor="let _state of states">{{ _state }}</mat-option>
+                                    </mat-select>
+                                </div>
+                                <div class="col-lg-4 mt-2 mt-lg-0">
+                                    <label id="country" class="mb-0 font-9">Country:</label>
+                                    <mat-select for="country" class="form-control form-control-sm" formControlName="country">
+                                        <mat-option [value]="''">Select a country</mat-option>
+                                        <mat-option [value]="'MYS'">Malaysia</mat-option>
+                                    </mat-select>
+                                </div>
+                            </div>
+                            <mat-checkbox [color]="'primary'" class="pt-1 mr-2 d-inline-block" formControlName="isCustomerSaved">
+                                <span class="font-8 align-middle">Check to save customer</span>
+                            </mat-checkbox>
+                        </div>
+                    </div>
+                <div class="mb-3">
+                    <h5 class="h6">ETA {{ form.controls.deliveryOption.value == 'delivery' ? 'Delivery' : 'Pick-up'}} Date</h5>
+                    <div class="row no-gutters">
+                        <input (click)="fromPicker.open()" placeholder="Date" [min]="form.controls['isCompletedChecked'].value ? '': todayDate" formControlName="etaDate" class="form-control form-control-sm mb-2 mr-2" style="max-width: 200px" [matDatepicker]="fromPicker" />
+                        <mat-datepicker #fromPicker startView="month" [startAt]="form.controls['isCompletedChecked'].value ? '': todayDate"></mat-datepicker>
+                        <div class="input-group" style="width: 150px">
+                            <mat-select class="form-control form-control-sm" placeholder="HH" formControlName="etaDateTimeHour">
+                                <mat-option [value]="''">HH</mat-option>
+                                <mat-option [value]="n" *ngFor="let n of hours">{{n}}</mat-option>
+                            </mat-select>
+                            <mat-select class="form-control form-control-sm" placeholder="MM" formControlName="etaDateTimeMin">
+                                <mat-option [value]="''">MM</mat-option>
+                                <mat-option [value]="n" *ngFor="let n of mins">{{n}}
+                                </mat-option>
+                            </mat-select>
+                        </div>
+                    </div>
+                    
+                    </div>
+                </div>
+            </mat-tab>
+            <mat-tab label="Promotion">
+                <div class="p-3">
+                    <mat-select class="form-control form-control-sm" placeholder="Promotion" (selectionChange)="notifyCalculation()" formControlName="promotion">
+                        <mat-option [value]="''">No promotion</mat-option>
+                        <mat-option [value]="promotion._id" *ngFor="let promotion of promotions">{{ promotion.title }}</mat-option>
                     </mat-select>
                 </div>
-            </div>
-        </div>
-        <div class="mb-3">
-            <h5 class="h6">Remark</h5>
-            <textarea class="form-control form-control-sm" rows="5" maxlength="300" placeholder="Write remark here" formControlName="remark"></textarea>
-        </div>
+            </mat-tab>
+            <mat-tab label="Others">
+                <div class="p-3">
+                    <textarea class="form-control form-control-sm" rows="5" maxlength="300" placeholder="Write remark here" formControlName="remark"></textarea>
+                </div>
+            </mat-tab>
+        </mat-tab-group>
         <div>
             <div class="d-inline-block float-right">
                 <button *ngIf="isEditable()" class="btn btn-controller btn-sm mr-2" [disabled]="modifyLoading.isRunning()" (click)="modifyItem()">
