@@ -40,3 +40,10 @@
         }
     }
 }
+
+mat-tab-group mat-tab-header .mat-elevation-z4{
+    box-shadow: none;
+}
+mat-tab-group mat-tab-header .mat-tab-label {
+    min-width: 0;
+}
