@@ -4,6 +4,11 @@
 
 - v1.0.1080                                 -
 ---------------------------------------------
+- 2021-02-26                                -
+---------------------------------------------
+.: WSM: Task: Better adding invoice UI (WSM-302)
+
+---------------------------------------------
 - 2021-02-24                                -
 ---------------------------------------------
 .: WSM: Task: Adding invoice tracking dot (WSM-305)
